updating requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,32 @@
-Django==1.8.5
-Fabric==1.10.2
-Paste==2.0.2
-WebOb==1.4.1
-argparse==1.4.0
-cffi==1.2.1
-cryptography==1.0.2
-decorator==4.0.4
-djangosaml2==0.13.0
+cffi==1.8.3
+cryptography==1.5.2
+decorator==4.0.10
+Django==1.10.2
+django-debug-toolbar==1.6
+django-sitetree==1.6.0
+django-zurb-foundation-rtl==6.0.6.3
+djangosaml2==0.14.5
 ecdsa==0.13
-enum34==1.0.4
-idna==2.0
-ipaddress==1.0.14
-paramiko==1.15.3
-psycopg2==2.6.1
-pyOpenSSL==0.15.1
+enum34==1.1.6
+Fabric==1.12.0
+future==0.15.2
+idna==2.1
+ipaddress==1.0.17
+paramiko==2.0.2
+Paste==2.0.3
+psycopg2==2.6.2
 pyasn1==0.1.9
 pycparser==2.14
 pycrypto==2.6.1
-pysaml2==2.2.0
-python-dateutil==2.4.2
-python-memcached==1.48
-pytz==2015.6
-repoze.who==2.2
-requests==2.7.0
-six==1.9.0
-wsgiref==0.1.2
-zope.interface==4.1.3
+pycryptodomex==3.4.2
+pyOpenSSL==16.1.0
+pysaml2==4.2.0
+python-dateutil==2.5.3
+python-memcached==1.58
+pytz==2016.7
+repoze.who==2.3
+requests==2.11.1
+six==1.10.0
+sqlparse==0.2.1
+WebOb==1.6.1
+zope.interface==4.3.2
